# NodeCode

./: .gitignore  CMakeLists.txt  LICENSE  README.md  resources.qrc
.github/workflows/: ci.yml
nodes/: builtins_cpp.node  builtins_javascript.node  builtins_python.node
src/: main.cpp
src/compiler/: CompilerBackend.cpp  CompilerBackend.h
src/core/: CodeGenerator.cpp  CodeGenerator.h  Node.cpp  Node.h  NodeDef.h  NodeGraph.cpp  NodeGraph.h  NodeLink.h  NodePort.h  Project.cpp  Project.h  Serialization.cpp  Serialization.h  TypeSystem.h
src/gui/: MainWindow.cpp  MainWindow.h  NodeGraphView.h  StyleSheet.cpp  StyleSheet.h
src/gui/items/: NodeCommentItem.cpp  NodeCommentItem.h  NodeGraphicsItem.cpp  NodeGraphicsItem.h  NodeLinkGraphicsItem.cpp  NodeLinkGraphicsItem.h  NodePortGraphicsItem.cpp  NodePortGraphicsItem.h
src/gui/panels/: CodePreviewPanel.cpp  CodePreviewPanel.h  ConsolePanel.cpp  ConsolePanel.h  NodeLibraryPanel.cpp  NodeLibraryPanel.h  VariablesPanel.cpp  VariablesPanel.h
src/gui/scene/: NodeGraphScene.cpp  NodeGraphScene.h
src/gui/widgets/: SearchableMenu.cpp  SearchableMenu.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
src/plugin/: PluginManager.cpp  PluginManager.h
tests/: test_code_generator.cpp  test_compiler_backend.cpp  test_main.cpp  test_node.cpp  test_node_graph.cpp  test_project.cpp  test_serialization.cpp  test_type_system.cpp
